--- a/src/Subdirectories/CMakeLists.txt
+++ b/src/Subdirectories/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-project(Calculator_Project VERSION 1.0.0)
+project(My_Project VERSION 1.0.0)
 
 
 add_subdirectory(complex)
