--- a/src/GTest/CMakeLists.txt
+++ b/src/GTest/CMakeLists.txt
@@ -11,13 +11,9 @@ if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
 endif()
 
-add_subdirectory(src)
+    add_subdirectory(src)
 
-include(cmake/googletest.cmake)
-fetch_googletest(
-    ${PROJECT_SOURCE_DIR}/cmake
-    ${PROJECT_BINARY_DIR}/googletest
-    )
+    # Removed GoogleTest fetch logic to prevent duplicate target errors
 
 enable_testing()
 add_subdirectory(test)
