--- a/src/GTest/src/CMakeLists.txt
+++ b/src/GTest/src/CMakeLists.txt
@@ -1,16 +1,15 @@
 
-add_library (vector "")
+add_library (vector INTERFACE)
 
 target_sources(
     vector
-    PRIVATE
-        vector.cpp
-    PUBLIC
+    INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/vector.h
+        # vector.cpp not needed - header-only template
     )
 
 target_include_directories(
     vector
-    PUBLIC
+    INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}
     )
