--- a/src/GTest/test/CMakeLists.txt
+++ b/src/GTest/test/CMakeLists.txt
@@ -1,17 +1,30 @@
-add_executable(
-	unit_tests
-	test_vector.cpp
+
+cmake_minimum_required(VERSION 3.15)
+project(vector_test CXX)
+
+include(GNUInstallDirs)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
+
+# Download GoogleTest
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/heads/main.zip
+)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(unit_tests test_vector.cpp main.cpp)
+
+# Add include path for vector.h
+target_include_directories(unit_tests PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/../src
+	${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(
-	unit_tests
-	gtest_main
-	vector
-)
+target_link_libraries(unit_tests gtest_main)
 
-add_test(
-	NAME
-		unit
-	COMMAND
-		${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests
-)
+add_test(NAME unit COMMAND unit_tests)
